--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,2 @@
 MONGODB_URI="mongodb+srv://iwang:xv4OlU2y8pMFZ4Xx@alp-portal.hh41pen.mongodb.net/?retryWrites=true&w=majority"
+NEXTAUTH_URL=http://localhost:3000
